app-config/flask-simple-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-simple-app
  labels:
    app: flask-simple-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-simple-app
  template:
    metadata:
      labels:
        app: flask-simple-app
    spec:
      containers:
      - name: flask
        image: registry.gitlab.com/israelsz/appexample:092c982e7ed488115ad3534b0dd29e92bfc24a0c
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
