app-config/flask-simple-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-simple-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - flask.macrohard.software
      secretName: flask-simple-tls
  rules:
    - host: flask.macrohard.software
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-simple-app
                port:
                  number: 80
